css/newfooter.css
footer {
  margin-top: 2em;
}

/*********************/
/*********************/
/*********************/

.sponsors h4 {
  border-bottom: 1px solid;
  padding-bottom: 15px;
  margin-bottom: 15px;
}

footer .sponsors ul {
  padding-top: 7px;
  border-bottom: 1px solid;
  text-align: center;
}

.sponsors ul li {
  display: inline-block;
  vertical-align: middle;
  margin: 0 2% 16px;
}

.sponsors ul li:first-child {
  margin-left: 0;
}

.sponsors ul li:last-child {
  margin-right: 0;
}

.sponsors ul li:nth-child(1) {
  width: 19%;
}

.sponsors ul li:nth-child(2) {
  margin-top: -2px;
  width: 9%;
}

.sponsors ul li:nth-child(3) {
  margin-top: 3px;
  width: 9%;
}

.sponsors ul li:nth-child(4) {
  width: 16%;
}

.sponsors ul li:nth-child(5) {
  margin-top: -5px;
  width: 6%;
}

.sponsors ul li:nth-child(6) {
  width: 16%;
}

.sponsors ul li img {
  width: 100%;
  max-width: 100%;
}

/*********************/
/*********************/
/*********************/

footer .blurb {
  margin-top: 18px;
  margin-bottom: 10px;
  font-size: 1.25em;
  text-transform: none;
}

#emailcapture h2 {
  padding-right: 0;
  font-size: 24px;
  line-height: 32px;
}

